# fastapi-psql

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  tasks.py
migrations/: env.py
migrations/versions/: 2026_04_16_1039-722d6843f692_initial_migration.py  2026_04_16_1052-f8f9b1fdd8c7_initial_migration.py  2026_04_16_1141-efc36342c3e9_initial_migration.py  2026_04_16_1713-eb92e8ea2258_add_characters.py  2026_04_16_1944-5b567df35e2d_add_character_backgrounds_and_races.py  2026_04_16_2113-b208493abf4b_add_items_and_inventories.py  2026_04_18_1002-7650c4b9927e_add_user_roles.py
scripts/: seed.py
src/: config.py  db.py  main.py
src/configs/: __init__.py
src/db/: __init__.py  connection.py
src/models/: __init__.py  background.py  base.py  character.py  inventory.py  item.py  mixins.py  race.py  role.py  user.py  user_role.py
src/models/mixins/: __init__.py  created_at.py  updated_at.py  uuid_pk.py
src/repositories/: users.py
src/routers/: __init__.py  auth.py  users.py
src/schemas/: auth.py  user.py
src/services/: auth.py  users.py
src/utils/: __init__.py  auth.py  emailer.py
tests/: conftest.py  test_main.py
