[project]
name = "DnD-Character-Manager"
version = "0.1.0"
description = "DnD Character Manager API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "invoke>=3.0.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.9",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle
    "W",     # pycodestyle
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "S",     # flake8-bandit
    "PT",    # flake8-pytest-style
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "FAST",  # FastAPI
    "TID",   # flake8-tidy-imports
]

ignore = [
    "E501", # ignore line too long
    "B008", # for Depends() в FastAPI
]

[tool.ruff.lint.isort]
known-first-party = ["src"] # imports sort

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # ignores unused imports
"tests/**" = ["S101", "ARG001"] # ignores assert
"migrations/**" = ["F401", "E501"] # ignores unused imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "standard"

include = ["src"]

exclude = ["**/__pycache__", ".venv"]

pythonVersion = "3.13"
pythonPlatform = "Windows"

reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportReturnType = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportIndexIssue = true
reportPrivateUsage = true
reportImplicitStringConcatenation = true
reportUnusedImport = true
reportUnusedVariable = "warning"

# for older syntax
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false

[tool.ruff.lint.flake8-type-checking]
# Ruff will help ensure that imports for types don't affect the application's runtime behavior
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "sqlalchemy.orm.DeclarativeBase"
]
